# Kelp

./: Makefile.am  configure.ac
src/: Makefile.am  callbacks.c  callbacks.h  kelp-app.c  kelp-app.h  kelp-computer-import.c  kelp-prefs.c  kelp-prefs.h  kelp-window.c  kelp-window.h  kelp-xml.c  kelp-xml.h  kelp.ui  kelp_app.h  kelp_computer_import.h  kelp_prefs.c  main.c
tests/: Makefile.am  check_app.c  check_xml.c  test.xml
